--- a/include/styles.css
+++ b/include/styles.css
@@ -19,3 +19,15 @@ li a:hover {
     color: white;
 }
 
+.homepage {
+	width:980px;
+	margin-left: auto;
+	margin-right: auto;
+	background-color: #E1D9D9;
+}
+
+p {
+	color: #000;
+	font-family: Arial;
+	font-size: 11px;
+}
