--- a/include/css/owl.carousel.css
+++ b/include/css/owl.carousel.css
@@ -34,18 +34,21 @@
 }
 /*-----*/
 .item h4 a{
-	font-size: 1.8em;
-	color: #999999;
+	font-size: 1em;
+	text-transform: uppercase;
+	color: #000;
 	padding: 0.5em 0 0.4em 0;
 	display:block;
 	transition:0.5s all;
     -webkit-transition:0.5s all;
     -moz-transition:0.5s all;
     -o-transition:0.5s all;
+
 }
 .item a.btn{
-	font-size: 1.2em;
-	background: #3CC395;
+	font-size: 1em;
+	text-transform: uppercase;
+	background: #13a04e;
 	display: inline-block;
 	padding: 10px 20px;
 	color: #ffffff;
