--- a/include/css/slider.css
+++ b/include/css/slider.css
@@ -1,6 +1,5 @@
 @font-face {
     font-family: 'Arial';
-    src:url(../fonts/BebasNeue-webfont.ttf) format('truetype');
 }
 .da-slider{
     font-family: 'Arial';
@@ -10,11 +9,10 @@
 	position: relative;
 	margin: 0px auto;
 	overflow: hidden;
-	background: transparent url(../images/slider_bg.jpg) repeat 0% 0%;
-	box-shadow: 0px 1px 1px rgba(0,0,0,0.2), 0px -1px 4px #32AC9D;
-	-webkit-box-shadow: 0px 1px 1px rgba(0,0,0,0.2), 0px -1px 4px #32AC9D;
-	-moz-box-shadow: 0px 1px 1px rgba(0,0,0,0.2), 0px -1px 4px #32AC9D;
-	-o-box-shadow: 0px 1px 1px rgba(0,0,0,0.2), 0px -1px 4px #32AC9D;
+	box-shadow: 0px 1px 1px rgba(0,0,0,0.2), 0px -1px 4px #2c3739;
+	-webkit-box-shadow: 0px 1px 1px rgba(0,0,0,0.2), 0px -1px 4px #2c3739;
+	-moz-box-shadow: 0px 1px 1px rgba(0,0,0,0.2), 0px -1px 4px #2c3739;
+	-o-box-shadow: 0px 1px 1px rgba(0,0,0,0.2), 0px -1px 4px #2c3739;
 	-webkit-transition: background-position 1.4s ease-in-out 0.3s;
 	-moz-transition: background-position 1.4s ease-in-out 0.3s;
 	-o-transition: background-position 1.4s ease-in-out 0.3s;
@@ -58,10 +56,11 @@
 	opacity: 1;
 }
 .da-slide h2{
-	color: #fff;
-	font-size: 66px;
+	color: #151f21;
+	font-size: 40px;
 	width: 50%;
-	top: 75px;
+	top: 85px;
+	text-transform: uppercase;
 	white-space: nowrap;
 	z-index: 10;
 	text-shadow: 1px 1px 1px rgba(0,0,0,0.1);
@@ -71,7 +70,7 @@
 	font-family: 'Source Sans Pro', sans-serif;
 	width: 40%;
 	top: 165px;
-	color: #ECFFFD;
+	color: #151f21;
 	font-size: 18px;
 	line-height: 26px;
 	height: 80px;
@@ -99,20 +98,20 @@
 	-o-box-shadow: 0px 1px 1px rgba(0,0,0,0.1);
 	color: #fff;
 	text-shadow: 1px 1px 1px rgba(0,0,0,0.2);
-	border: 4px solid rgba(255, 255, 255, 1);
 	padding: 14px 40px 12px;
-	font-size: 2em;
+	font-size: 1em;
 	line-height: 30px;
-	width: 110px;
+	width: 100px;
+	text-transform: uppercase;
 	text-align: center;
-	background: rgba(255, 255, 255, 0.13);
+	background: #13a04e;
 	-webkit-transition: all 0.3s ease-in-out;
 	-moz-transition: all 0.3s ease-in-out;
 	-o-transition: all 0.3s ease-in-out;
 	transition: all 0.3s ease-in-out;
 }
 .da-slide .da-link:hover{
-	background: rgba(255,255,255,0.3);
+	background: #0c8d42;
 }
 .da-dots{
 	width: 100%;
@@ -133,7 +132,7 @@
 	-webkit-border-radius: 50%;
 	-moz-border-radius: 50%;
 	-o-border-radius: 50%;
-	background: #38B4A7;
+	background: #455255;
 	margin: 3px;
 	cursor: pointer;
 	box-shadow: 1px 1px 1px rgba(0,0,0,0.1) inset,1px 1px 1px rgba(255,255,255,0.1);
@@ -174,7 +173,7 @@
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
 	-o-border-radius: 5px;
-	background: #38B4A7;
+	background: #455255;
 	cursor: pointer;
 	z-index: 2000;
 	opacity: 0;
