--- a/include/css/style.css
+++ b/include/css/style.css
@@ -451,7 +451,8 @@ body {
 	position: relative;
 }
 .grid1_of_3:first-child{
-	margin-left: 0;
+	margin-left: 3%;
+	margin-top: 2%;
 }
 .grid1_of_3 a{
 	padding: 2%;
@@ -880,7 +881,13 @@ input[type=text], input[type=password] {
     border: 1px solid #ccc;
     box-sizing: border-box;
 }
-
+.descname  {
+	font-family: Arial;
+	color: #222b2d;
+	margin-top: 10px;
+	font-style: bold;
+	font-size: 1.2em;
+}
 button {
     background-color: #4CAF50;
     color: white;
@@ -890,7 +897,15 @@ button {
     cursor: pointer;
     width: 100%;
 }
-
+.viewbtn {
+	width:40%;
+	background-color: #14a154;
+	margin-bottom: -30px;
+	font-size: 1.1em;
+}
+.viewbtn:hover {
+	background-color: #0e8041;
+}	
 .cancelbtn {
     width: auto;
     padding: 10px 18px;
