--- a/include/css/style.css
+++ b/include/css/style.css
@@ -905,6 +905,54 @@ span.psw {
 }
 
 /*-- login details--*/
+/*-- category details--*/
+
+.ccontainer{
+	
+	font-family: Arial; 
+	margin-left:50px;
+	margin-right:auto;
+	margin-top:20px;
+	margin-bottom:10px;
+	width:350px;
+	
+}
+.c2container{
+	
+	font-family: Arial;
+	margin-left:auto;
+	margin-right:auto;
+	
+	
+}
+.btn-cupdate{
+	height:40px;
+	width:100px;
+	background-color:green;
+	margin-left:30px;
+	margin-top:-50px;;
+	border-radius:5px;
+}
+.btn-cupdate2{
+	height:40px;
+	width:100px;
+	background-color:green;
+	margin-left:500px;
+	margin-top:-48px;
+	border-radius:5px;
+	
+}
+.btn-cdelete{
+	height:40px;
+	width:100px;
+	background-color:red;
+	margin-left:60px;
+	border-radius:5px;
+	margin-top:-50px;
+	
+	
+}
+/*-- category details--*/
 
 .single{
 	padding:2% 0;
