--- a/include/css/style.css
+++ b/include/css/style.css
@@ -75,7 +75,7 @@ body {
 	color: #312c3c;
 	background: #FFFFFF;
 	border: none;
-	width: 84.33333%;
+	width: 74.33333%;
 	line-height: 1.5em;
 	position: relative;
 	font-size: 0.8725em;
@@ -91,7 +91,8 @@ body {
 	line-height: 1.5em;
 	outline: none;
 	position: absolute;
-	right: 0px;
+	right: 90px;
+	top: 9px;
 }
 .h_search input[type="submit"]:hover {
 	background: url('../images/search_h.png') no-repeat 10px 5px;
@@ -1198,6 +1199,20 @@ span.psw {
 	min-width: 30%;
 }
 /* end of detail buttons */
+
+/* start of my cart */
+.table mycart { 
+	border-collapse: collapse;
+    width: 100%;
+}
+th, td {
+    padding: 8px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+}
+
+tr:hover{background-color:#f5f5f5}
+/* end of my cart */
 
 /* start sellers */
 .sellers{
