--- a/include/css/style.css
+++ b/include/css/style.css
@@ -1206,12 +1206,13 @@ span.psw {
     width: 100%;
 }
 th, td {
-    padding: 8px;
-    text-align: left;
+    padding: 5%;
+    text-align: center;
     border-bottom: 1px solid #ddd;
 }
 
 tr:hover{background-color:#f5f5f5}
+		
 /* end of my cart */
 
 /* start sellers */
