--- a/include/css/style.css
+++ b/include/css/style.css
@@ -1202,14 +1202,18 @@ span.psw {
 
 /* start of my cart */
 .table mycart { 
-	border-collapse: collapse;
     width: 100%;
 }
-th, td {
+th{
+    text-align: center;	
+	font-weight: bold;
+    border-bottom: 1px solid #ddd;
+}
+td {
     padding: 5%;
     text-align: center;
     border-bottom: 1px solid #ddd;
-	
+	width: 1%;
 }
 
 tr:hover{background-color:#f5f5f5}
@@ -1228,7 +1232,7 @@ tr:hover{background-color:#f5f5f5}
 	line-height: 1.5em;
 	text-shadow: 0 1px 0 #1C6159;
 	padding: 10px 20px;
-	background: #4CCFC1;
+	background: #13a04e;
 }
 .single-nav li {
 	list-style-image: url(../images/marker1.gif);
