--- a/include/css/style.css
+++ b/include/css/style.css
@@ -1206,22 +1206,42 @@ span.psw {
 /* end of detail buttons */
 
 /* start of my cart */
+.mycartwrapper{
+	min-width: 25%;
+	display: inline-block;
+	border: 1px solid #ddd;
+}
 table.tablemycart { 
     width: 100%;
+	color: #444646;
+	font-size: .90em;
 }
 table.tablemycart th{
     text-align: center;	
+	padding: 2%;
 	font-weight: bold;
-    border-bottom: 1px solid #ddd;
+    border-bottom: 2px solid #ddd;	
+}
+table.tablemycart th.prodname{
+	min-width: 20px;
+}
+.mycartheader{
+   background-color: red;
+   font-size: 2.3em;
+   background-color: #13a04e;
+   color: #fff;
+   height: 8%;
+   text-align: center;
+   font-family: bebas_neueregular;
 }
 table.tablemycart td {
-    padding: 5%;
+    padding: 2%;
     text-align: center;
     border-bottom: 1px solid #ddd;
-	width: 1%;
 }
-
-table.tablemycart tr:hover{background-color:#f5f5f5}
+table.tablemycart tr:hover{
+	background-color:#f5f5f5
+}
 		
 /* end of my cart */
 
