--- a/include/css/style.css
+++ b/include/css/style.css
@@ -1,5 +1,3 @@
-
-/* reset */
 html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,dl,dt,dd,ol,nav ul,nav li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline;}
 article, aside, details, figcaption, figure,footer, header, hgroup, menu, nav, section {display: block;}
 ol,ul{list-style:none;margin:0;padding:0;}
@@ -898,110 +896,165 @@ p.para{
 	background-color:black;
 }
 
-/*-- start of table account --*/
-table.tableaccount {
-		border-collapse: collapse;
-		width: 100%;
-		font-family: Arial;
-		font-size: 90%;
-	}
-table.tableaccount tr, th {
-		padding: 8px;
-		text-align: center;
-		border-bottom: 1px solid #ddd;
-		text-decoration: none;
-		background-color: #167F92;
-		
-	}
-table.tableaccount tr:nth-child(even){
-		padding: 8px;
-		text-align: center;
-		border-bottom: 1px solid #ddd;
-		background-color:#D9E4E6;
-	}
-table.tableaccount tr:nth-child(odd){
-		padding: 8px;
-		text-align: center;
-		border-bottom: 1px solid #ddd;
-		background-color:#fefefe;
-	}
-table.tableaccount tr:hover{
-	background-color:#f5f5f5;
-	}
-table.tableaccount td:hover{
-	background-color:#f5f5f5;
-	}
-button {
-		border: none;
-		border-radius: 5px;
-		padding: 5px 10px;
-		text-align: center;
-		text-decoration: none;
-		display: inline-block;
-		font-size: 90%;
-		margin: 2px 2px;
-		cursor: pointer;
-		-webkit-transition-duration: 0.4s; /* Safari */
-		transition-duration: 0.4s;
-	}
-	
-.deletebtn:hover {
-		background-color: #ac1414;
-	}
-	
-.deletebtn {
-		color: white;
-		background-color: #e52828;
-		margin-left:-4px;
-	}
-	
-.updatebtn {
-		color: white;
-		background-color: #2391d6;
-	}
-	
-.updatebtn:hover {
-	background-color: #186799;
+/*-- start of table list --*/
+.listwrapper {
+	width: 73.333%;
+	margin-left: auto;
+	margin-right: auto;
+	padding-top: 1%
 }
-/*-- end account --*/
-
-/*-- start of order --*/
-
-table.tableorder {
+table.tablelist {
 		border-collapse: collapse;
 		width: 100%;
 		font-family: Arial;
-		font-size: 90%;
+		font-size: 85%;
 	}
-table.tableorder tr, th {
-		padding: 8px;
+table.tablelist th {
+		padding: 20px;
 		text-align: center;
-		border-bottom: 1px solid #ddd;
+		border-bottom: 1px solid #eaeaea;
+		border-top: 1px solid #eaeaea;
 		text-decoration: none;
-		background-color: #167F92;
+		font-size: .85em;
+		font-weight: bold;
 		
 	}
-table.tableorder tr:nth-child(even){
-		padding: 8px;
+table.tablelist td	{
+	padding: 8px;
+	}
+table.tablelist tr:nth-child(even){
 		text-align: center;
-		border-bottom: 1px solid #ddd;
-		background-color:#D9E4E6;
+		border-bottom: 1px solid #eaeaea;
+		background-color:#fafafa;
 	}
-table.tableorder tr:nth-child(odd){
-		padding: 8px;
+table.tablelist tr:nth-child(odd){
 		text-align: center;
-		border-bottom: 1px solid #ddd;
-		background-color:#fefefe;
+		border-bottom: 1px solid #eaeaea;
 	}
-table.tableorder tr:hover{
-	background-color:#f5f5f5;
+table.tablelist tr:hover{
+	background-color:#fbfbfb;
 	}
-table.tableorder td:hover{
-	background-color:#f5f5f5;
-	}
+/*-- end table list --*/
 	
-/*-- end of order --*/
-
+/** update & delete buttons **/  	
+.myButton {
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #ededed), color-stop(1, #dfdfdf));
+	background:-moz-linear-gradient(top, #ededed 5%, #dfdfdf 100%);
+	background:-webkit-linear-gradient(top, #ededed 5%, #dfdfdf 100%);
+	background:-o-linear-gradient(top, #ededed 5%, #dfdfdf 100%);
+	background:-ms-linear-gradient(top, #ededed 5%, #dfdfdf 100%);
+	background:linear-gradient(to bottom, #ededed 5%, #dfdfdf 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ededed', endColorstr='#dfdfdf',GradientType=0);
+	background-color:#ededed;
+	-moz-border-radius:3px;
+	-webkit-border-radius:3px;
+	border-radius:3px;
+	border:1px solid #dcdcdc;
+	display:inline-block;
+	cursor:pointer;
+	color:#373737;
+	font-family:Arial;
+	font-size:.85em;
+	font-weight: bold;
+	padding:11px 26px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #ffffff;
+}
+.myButton:hover {
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #dfdfdf), color-stop(1, #ededed));
+	background:-moz-linear-gradient(top, #dfdfdf 5%, #ededed 100%);
+	background:-webkit-linear-gradient(top, #dfdfdf 5%, #ededed 100%);
+	background:-o-linear-gradient(top, #dfdfdf 5%, #ededed 100%);
+	background:-ms-linear-gradient(top, #dfdfdf 5%, #ededed 100%);
+	background:linear-gradient(to bottom, #dfdfdf 5%, #ededed 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#dfdfdf', endColorstr='#ededed',GradientType=0);
+	background-color:#dfdfdf;
+}
+.myButton:active {
+	position:relative;
+	top:1px;
+}
+.deletebtn {
+	-moz-box-shadow:inset 0px 1px 0px 0px #f5978e;
+	-webkit-box-shadow:inset 0px 1px 0px 0px #f5978e;
+	box-shadow:inset 0px 1px 0px 0px #f5978e;
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #fa5449), color-stop(1, #f25041));
+	background:-moz-linear-gradient(top, #fa5449 5%, #f25041 100%);
+	background:-webkit-linear-gradient(top, #fa5449 5%, #f25041 100%);
+	background:-o-linear-gradient(top, #fa5449 5%, #f25041 100%);
+	background:-ms-linear-gradient(top, #fa5449 5%, #f25041 100%);
+	background:linear-gradient(to bottom, #fa5449 5%, #f25041 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#fa5449', endColorstr='#f25041',GradientType=0);
+	background-color:#fa5449;
+	-moz-border-radius:2px;
+	-webkit-border-radius:2px;
+	border-radius:2px;
+	border:1px solid #db2315;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:.88em;
+	font-weight:bold;
+	padding:8px 16px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #810e05;
+}
+.deletebtn:hover {
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #f25041), color-stop(1, #fa5449));
+	background:-moz-linear-gradient(top, #f25041 5%, #fa5449 100%);
+	background:-webkit-linear-gradient(top, #f25041 5%, #fa5449 100%);
+	background:-o-linear-gradient(top, #f25041 5%, #fa5449 100%);
+	background:-ms-linear-gradient(top, #f25041 5%, #fa5449 100%);
+	background:linear-gradient(to bottom, #f25041 5%, #fa5449 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#f25041', endColorstr='#fa5449',GradientType=0);
+	background-color:#f25041;
+}
+.deletebtn:active {
+	position:relative;
+	top:1px;
+}
+.updatebtn {
+	-moz-box-shadow:inset 0px 1px 0px 0px #bee2f9;
+	-webkit-box-shadow:inset 0px 1px 0px 0px #bee2f9;
+	box-shadow:inset 0px 1px 0px 0px #bee2f9;
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #81bfe6), color-stop(1, #709ec7));
+	background:-moz-linear-gradient(top, #81bfe6 5%, #709ec7 100%);
+	background:-webkit-linear-gradient(top, #81bfe6 5%, #709ec7 100%);
+	background:-o-linear-gradient(top, #81bfe6 5%, #709ec7 100%);
+	background:-ms-linear-gradient(top, #81bfe6 5%, #709ec7 100%);
+	background:linear-gradient(to bottom, #81bfe6 5%, #709ec7 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#81bfe6', endColorstr='#709ec7',GradientType=0);
+	background-color:#81bfe6;
+	-moz-border-radius:2px;
+	-webkit-border-radius:2px;
+	border-radius:2px;
+	border:1px solid #3866a3;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:.88em;
+	font-weight:bold;
+	padding:8px 16px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #346ca3;
+}
+.updatebtn:hover {
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #709ec7), color-stop(1, #81bfe6));
+	background:-moz-linear-gradient(top, #709ec7 5%, #81bfe6 100%);
+	background:-webkit-linear-gradient(top, #709ec7 5%, #81bfe6 100%);
+	background:-o-linear-gradient(top, #709ec7 5%, #81bfe6 100%);
+	background:-ms-linear-gradient(top, #709ec7 5%, #81bfe6 100%);
+	background:linear-gradient(to bottom, #709ec7 5%, #81bfe6 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#709ec7', endColorstr='#81bfe6',GradientType=0);
+	background-color:#709ec7;
+}
+.updatebtn:active {
+	position:relative;
+	top:1px;
+}
+/** end of buttons **/
 /*-- login details--*/
 form {
     border: 3px solid #f1f1f1;
@@ -1026,15 +1079,6 @@ input[type=text], input[type=password] {
 	width:350px; 
 	height:100px; 
 	padding:6px 10px;
-}
-button {
-    background-color: #4CAF50;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    cursor: pointer;
-    width: 100%;
 }
 .viewbtn {
 	width:40%;
