--- a/include/css/style.css
+++ b/include/css/style.css
@@ -1061,6 +1061,7 @@ table.tablelist tr:hover{
 	margin-left:auto;
 	margin-right: auto;
 	background-color: #f8f8f8; 
+	margin-top: 3%;
 }
 form {
     border: 3px solid #f1f1f1;
@@ -1069,6 +1070,11 @@ form {
 	font-size: 1.1em;
 	color: #2a2a2a;
 }
+.logincenter {
+	margin-left: auto;
+	margin-right: auto;
+	width: 150px;
+}	
 .loginbtn {
 	-moz-box-shadow:inset 0px 1px 0px 0px #52b374;
 	-webkit-box-shadow:inset 0px 1px 0px 0px #52b374;
@@ -1090,7 +1096,7 @@ form {
 	color:#ffffff;
 	font-family:Arial;
 	font-size:1em;
-	padding:2% 8%;
+	padding:8px 57px;
 	text-decoration:none;
 }
 .loginbtn:hover {
