--- a/include/css/style.css
+++ b/include/css/style.css
@@ -869,6 +869,52 @@ p.para{
 	resize:none;
 	height:120px;		
 }
+
+.wrapper{
+	width:73.333%;
+	margin-left:auto;
+	margin-right:auto;
+	margin-top:3%;
+}
+
+.fnhalf{
+	width:48%;
+	display:inline-block;
+	margin-right:3.333%;
+}
+.fnwhole{
+	width:100%;
+	display:inline-block;
+	margin-right:2%;
+	margin-bottom: 2%;
+}
+.lnhalf{
+	width:48%;
+	display:inline-block;
+}
+.lnwhole{
+	width:47%;
+	display:inline-block;
+}
+.wholedescription{
+	width:100%;
+	display:inline-block;
+	height:20%;
+	font-size: 17px;
+    padding: 8px 14px;
+    margin: 8px 0;
+    border: 2px solid #ddd;
+    box-sizing: border-box;
+    border-radius: 0 !important;
+    transition: border-color ease-in-out .15s;
+}
+.select{
+	height: 50px; 
+	width: 200px; 
+	font-size:1.05em;
+}
+
+
 .contact-form input[type="submit"]{
 	margin-top:10px;
 	font-family: 'Source Sans Pro', sans-serif;
@@ -959,6 +1005,16 @@ button {
 		color: white;
 		background-color: #2391d6;
 	}
+.registerbtn {
+	border: 2px solid #444;
+    background-color: transparent;
+    color: #333;
+    text-shadow: none;
+	width:10%;
+	height:7%;
+	padding:3px 3px;
+	font-weight:600;
+	}
 	
 .updatebtn:hover {
 	background-color: #186799;
@@ -1004,28 +1060,27 @@ table.tableorder td:hover{
 
 /*-- login details--*/
 form {
-    border: 3px solid #f1f1f1;
+    border: none;
 }
 
 input[type=text], input[type=password] {
-    width: 350px;
-    padding: 6px 10px;
+    width: 100%;
+    padding: 8px 14px;
+	height: 50px;
     margin: 8px 0;
     display: inline-block;
-    border: 1px solid #ccc;
+    border: 2px solid #ddd;
     box-sizing: border-box;
-}
+	border-radius:0 !important;
+	font-size:17px;
+	transition: border-color ease-in-out .15s;
+	}
 .descname  {
 	font-family: Arial;
 	color: #222b2d;
 	margin-top: 10px;
 	font-style: bold;
 	font-size: 1.2em;
-}
-.description {
-	width:350px; 
-	height:100px; 
-	padding:6px 10px;
 }
 button {
     background-color: #4CAF50;
@@ -1611,6 +1666,18 @@ table.tablemycart tr:hover{
     -webkit-border-radius: 0 3px 3px 3px;
     -moz-border-radius: 0 3px 3px 3px;
     -o-border-radius: 0 3px 3px 3px;
+}
+
+label {
+	display: inline-block;
+    font-size: 13px;
+    font-weight: 700;
+    font-family: 'Open Sans', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    color: #555;
+    margin-bottom: -2px;
+    cursor: pointer;
 }
 .content div {
 	width:98%;
