--- a/include/css/style.css
+++ b/include/css/style.css
@@ -1494,8 +1494,92 @@ table.tablemycart td {
 table.tablemycart tr:hover{
 	background-color:#f5f5f5
 }
-		
+.checkoutbtn {
+	-moz-box-shadow:inset 0px 1px 0px 0px #52b374;
+	-webkit-box-shadow:inset 0px 1px 0px 0px #52b374;
+	box-shadow:inset 0px 1px 0px 0px #52b374;
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #15ab53), color-stop(1, #0e8a41));
+	background:-moz-linear-gradient(top, #15ab53 5%, #0e8a41 100%);
+	background:-webkit-linear-gradient(top, #15ab53 5%, #0e8a41 100%);
+	background:-o-linear-gradient(top, #15ab53 5%, #0e8a41 100%);
+	background:-ms-linear-gradient(top, #15ab53 5%, #0e8a41 100%);
+	background:linear-gradient(to bottom, #15ab53 5%, #0e8a41 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#15ab53', endColorstr='#0e8a41',GradientType=0);
+	background-color:#15ab53;
+	-moz-border-radius:1px;
+	-webkit-border-radius:1px;
+	border-radius:1px;
+	border:1px solid #1e6637;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:.90em;
+	font-weight: bold;
+	padding:6px 52px;
+	text-decoration:none;
+}
+.checkoutbtn:hover {
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #0e8a41), color-stop(1, #15ab53));
+	background:-moz-linear-gradient(top, #0e8a41 5%, #15ab53 100%);
+	background:-webkit-linear-gradient(top, #0e8a41 5%, #15ab53 100%);
+	background:-o-linear-gradient(top, #0e8a41 5%, #15ab53 100%);
+	background:-ms-linear-gradient(top, #0e8a41 5%, #15ab53 100%);
+	background:linear-gradient(to bottom, #0e8a41 5%, #15ab53 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#0e8a41', endColorstr='#15ab53',GradientType=0);
+	background-color:#0e8a41;
+}
+.checkoutbtn:active {
+	position:relative;
+	top:1px;
+}
+
+.totalprice {
+	font-weight: bold;
+}	
 /* end of my cart */
+
+/* wishlist btn */
+.wishbtn {
+	-moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
+	-webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;
+	box-shadow:inset 0px 1px 0px 0px #ffffff;
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #ffffff), color-stop(1, #f6f6f6));
+	background:-moz-linear-gradient(top, #ffffff 5%, #f6f6f6 100%);
+	background:-webkit-linear-gradient(top, #ffffff 5%, #f6f6f6 100%);
+	background:-o-linear-gradient(top, #ffffff 5%, #f6f6f6 100%);
+	background:-ms-linear-gradient(top, #ffffff 5%, #f6f6f6 100%);
+	background:linear-gradient(to bottom, #ffffff 5%, #f6f6f6 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#f6f6f6',GradientType=0);
+	background-color:#ffffff;
+	-moz-border-radius:2px;
+	-webkit-border-radius:2px;
+	border-radius:2px;
+	border:1px solid #dcdcdc;
+	display:inline-block;
+	cursor:pointer;
+	color:#666666;
+	font-family:Arial;
+	font-size:15px;
+	font-weight:bold;
+	padding:6px 24px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #ffffff;
+}
+.wishbtn:hover {
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #f6f6f6), color-stop(1, #ffffff));
+	background:-moz-linear-gradient(top, #f6f6f6 5%, #ffffff 100%);
+	background:-webkit-linear-gradient(top, #f6f6f6 5%, #ffffff 100%);
+	background:-o-linear-gradient(top, #f6f6f6 5%, #ffffff 100%);
+	background:-ms-linear-gradient(top, #f6f6f6 5%, #ffffff 100%);
+	background:linear-gradient(to bottom, #f6f6f6 5%, #ffffff 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#f6f6f6', endColorstr='#ffffff',GradientType=0);
+	background-color:#f6f6f6;
+}
+.wishbtn:active {
+	position:relative;
+	top:1px;
+}
 
 /* start sellers */
 .sellers{
