--- a/include/css/style.css
+++ b/include/css/style.css
@@ -1172,6 +1172,46 @@ form {
 	position:relative;
 	top:1px;
 }
+.registerbtn {
+	-moz-box-shadow: 0px 10px 14px -7px #3e7327;
+	-webkit-box-shadow: 0px 10px 14px -7px #3e7327;
+	box-shadow: 0px 10px 14px -7px #3e7327;
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #77b55a), color-stop(1, #72b352));
+	background:-moz-linear-gradient(top, #77b55a 5%, #72b352 100%);
+	background:-webkit-linear-gradient(top, #77b55a 5%, #72b352 100%);
+	background:-o-linear-gradient(top, #77b55a 5%, #72b352 100%);
+	background:-ms-linear-gradient(top, #77b55a 5%, #72b352 100%);
+	background:linear-gradient(to bottom, #77b55a 5%, #72b352 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#77b55a', endColorstr='#72b352',GradientType=0);
+	background-color:#77b55a;
+	-moz-border-radius:2px;
+	-webkit-border-radius:2px;
+	border-radius:2px;
+	border:1px solid #4b8f29;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:1em;
+	font-weight:bold;
+	padding:8px 12px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #5b8a3c;
+}
+.registerbtn:hover {
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #72b352), color-stop(1, #77b55a));
+	background:-moz-linear-gradient(top, #72b352 5%, #77b55a 100%);
+	background:-webkit-linear-gradient(top, #72b352 5%, #77b55a 100%);
+	background:-o-linear-gradient(top, #72b352 5%, #77b55a 100%);
+	background:-ms-linear-gradient(top, #72b352 5%, #77b55a 100%);
+	background:linear-gradient(to bottom, #72b352 5%, #77b55a 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#72b352', endColorstr='#77b55a',GradientType=0);
+	background-color:#72b352;
+}
+.registerbtn:active {
+	position:relative;
+	top:1px;
+}
 	
 input[type=text], input[type=password] {
     width: 100%;
@@ -1193,15 +1233,6 @@ input[type=text], input[type=password] {
 	font-style: bold;
 	font-size: 1.2em;
 }
-.viewbtn {
-	width:40%;
-	background-color: #14a154;
-	margin-bottom: -30px;
-	font-size: 1.1em;
-}
-.viewbtn:hover {
-	background-color: #0e8041;
-}	
 .cancelbtn {
     width: auto;
     padding: 10px 18px;
@@ -1596,7 +1627,7 @@ table.tablemycart tr:hover{
 }	
 /* end of my cart */
 
-/* wishlist btn */
+/* wishlist */
 .wishbtn {
 	-moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
 	-webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;
@@ -1619,7 +1650,7 @@ table.tablemycart tr:hover{
 	font-family:Arial;
 	font-size:15px;
 	font-weight:bold;
-	padding:6px 24px;
+	padding:8px 38px;
 	text-decoration:none;
 	text-shadow:0px 1px 0px #ffffff;
 }
@@ -1638,6 +1669,12 @@ table.tablemycart tr:hover{
 	top:1px;
 }
 
+.wishmessage { 
+	font-size: .85em;
+	font-weight: bold;
+	text-transform: uppercase;
+	color: #e41b1b;
+}
 /* start sellers */
 .sellers{
 	font-family: 'Source Sans Pro', sans-serif;
