--- a/include/css/style.css
+++ b/include/css/style.css
@@ -1625,8 +1625,7 @@ table.tablemycart tr:hover{
 	margin-left: auto;
 	margin-top: 1%;
 	margin-bottom: 1%;
-	width: 310px;
-	color: #2A8C00;
+	color: #4F8A10;
 }	
 
 /* wishlist */
