--- a/include/css/style.css
+++ b/include/css/style.css
@@ -1513,19 +1513,53 @@ span.psw {
 
 /* start of accountdetails */
 .accountdetails{
-	width: 50%;
+	width: 70%;
 	margin-left: auto;
 	margin-right: auto;
-	margin-top: 4%;
+	margin-top:2%;
+	word-wrap: break-word;
 }
+.personalinfo{
+	width: 100%;
+	word-wrap: break-word;
+	border-bottom: 3px solid #c0c0c0;	
+}
+.accountlabels{
+	text-transform: uppercase;
+	font-size: .9em;
+	display: inline-block;
+	font-weight: bold;
+}
+.accountleft{
+	width: 49.3333%;	
+	height:300px;
+	display: inline-block;
+	margin: 0px 1px;
+	word-wrap: break-word;
+	margin-top:1%;
+	padding: 1px;
+	font-size: 1em;
+	text-transform: capitalize;
+}
+
+.accountright{
+	width: 49.3333%;
+	height:300px;
+	word-wrap: break-word;
+	margin-top:1%;
+	padding: 1px;
+	font-size: 1em;
+	text-transform: capitalize;
+}
+
 .myaccountheader{
-	font-size: 1.8em;
-	border-bottom: 2px solid #ddd;
+	font-size: 1.4em;
 	font-weight: bold;
 	color: #09340E;
+	border-bottom: 1px solid #cecece;
 }
 .myaccountfont{
-	font-size: .9em;
+	font-size: 1em;
 	text-transform: capitalize;
 }
 .accountbtn{
