--- a/include/css/style.css
+++ b/include/css/style.css
@@ -1088,7 +1088,6 @@ table.tablelist tr:hover{
 	text-decoration:none;
 	text-shadow:0px 1px 0px #346ca3;
 	}
-	
 .updatebtn:hover {
 	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #709ec7), color-stop(1, #81bfe6));
 	background:-moz-linear-gradient(top, #709ec7 5%, #81bfe6 100%);
@@ -1495,23 +1494,32 @@ span.psw {
 	min-width: 30%;
 }
 
-.pendingorder {
+.pendingOrder {
 	background-color:#C3B8B6; 
 	cursor:pointer;
 	color:white; 
 	border-right:1px solid;
 }
-.approvedorder {
+.approvedOrder {
 	background-color:#67B442;
 	color:white;
 	cursor:pointer;
 	border-right:1px solid;
 }
-.rejectedorder {
+.delivery {
+	background-color: blue;
+	color:white;
+	cursor:pointer;
+	border-right:1px solid;
+}
+.rejectedOrder {
 	background-color:#CA503D; 
 	cursor:pointer; 
-	color:white; 
+	color:white;
+	border-right:1px solid;
 }
+width:80px; height:35px; background-color:red;border-radius:4px; color:white; cursor:pointer;
+
 /* end of detail buttons */
 
 /* start of checkout */
