--- a/include/css/style.css
+++ b/include/css/style.css
@@ -1685,12 +1685,32 @@ table.tablemycart tr:hover{
 /* messages */
 .successmessage {
 	font-weight: bold;
-	margin-right: auto;
-	margin-left: auto;
-	margin-top: 1%;
-	margin-bottom: 1%;
-	color: #4F8A10;
-}	
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 1%;
+    margin-bottom: 1%;
+    color: #fff;
+    height: 33px;
+    background-color: #54c571;
+    padding-top: 15px;
+    padding-left: 17px;
+	border-radius:5px;
+	
+}
+.errormessage {
+	font-weight: bold;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 1%;
+    margin-bottom: 1%;
+    color: #fff;
+    height: 33px;
+    background-color: #54c571;
+    padding-top: 15px;
+    padding-left: 17px;
+	border-radius:5px;
+	
+}		
 
 .wishmessage { 
 	font-size: .85em;
