--- a/include/web/css/style.css
+++ b/include/web/css/style.css
@@ -1204,7 +1204,21 @@ form {
 	top:1px;
 }
 	
-input[type=text], input[type=password] {
+input[type=text], input[type=password]{
+    width: 100%;
+    padding: 8px 14px;
+	height: 50px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 2px solid #ddd;
+    box-sizing: border-box;
+	border-radius:0 !important;	
+	transition: border-color ease-in-out .15s;
+	font-size: .95em;
+}
+
+	
+.selectOption{
     width: 100%;
     padding: 8px 14px;
 	height: 50px;
